--- a/src/web/index.html
+++ b/src/web/index.html
@@ -124,6 +124,17 @@
                             </div>
                         </div>
                     </li>
+                    <li class="list-group-item tubus-container">
+                        <div class="drug-container row">
+                            <div class="col-6">
+                                <span class="drug-name">Dubina tubusa (cm)</span>
+                            </div>
+                            <div class="col-6">
+                                <div>Oralni: <span id="oral" class="drug-value"></span></div>
+                                <div>Nazalni: <span id="nazal" class="drug-value"></span></div>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
