--- a/src/web/index.html
+++ b/src/web/index.html
@@ -75,63 +75,74 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         <div class="drug-container row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span class="drug-name">Adrenalin</span>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span id="adrenalin" class="drug-value"></span>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="drug-container row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span class="drug-name">Amiodaron</span>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span id="amiodaron" class="drug-value"></span>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="drug-container row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span class="drug-name">Bolus tekućine</span>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span id="bolus" class="drug-value"></span>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="drug-container row">
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span class="drug-name">Defibrilacija</span>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-md-6">
                                 <span id="defib" class="drug-value"></span>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item">
                         <div class="drug-container row">
-                            <div class="col-6">
-                                <span class="drug-name">Veličina tubusa (mm)</span>
+                            <div class="col-12 col-md-6">
+                                <span class="drug-name">Veličina tubusa</span>
                             </div>
-                            <div class="col-6">
-                                <div>Bez balončića: <span id="vtub" class="drug-value"></span></div>
-                                <div>S balončićem: <span id="vtub-cuffa" class="drug-value"></span></div>
+                            <div class="col-12 col-md-6">
+                                <div>Bez balončića: <span id="vtub" class="drug-value"></span> mm</div>
+                                <div>S balončićem: <span id="vtub-cuffa" class="drug-value"></span> mm</div>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item tubus-container">
                         <div class="drug-container row">
-                            <div class="col-6">
-                                <span class="drug-name">Dubina tubusa (cm)</span>
+                            <div class="col-12 col-md-6">
+                                <span class="drug-name">Dubina tubusa</span>
                             </div>
-                            <div class="col-6">
-                                <div>Oralni: <span id="oral" class="drug-value"></span></div>
-                                <div>Nazalni: <span id="nazal" class="drug-value"></span></div>
+                            <div class="col-12 col-md-6">
+                                <div>Oralni: <span id="oral" class="drug-value"></span> cm</div>
+                                <div>Nazalni: <span id="nazal" class="drug-value"></span> cm</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item tubus-container">
+                        <div class="drug-container row">
+                            <div class="col-12 col-md-6">
+                                <span class="drug-name">Brzina infuzije kateholamina</span>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <div>Adrenalin, noradrenalin: <span id="adrenalin-noradrenalin" class="drug-value"></span> mL/h (0.1 ucg/kg/min)</div>
+                                <div>Dopamin, dobutamin: <span id="dopamin-dobutamin" class="drug-value"></span> mL/h (5 ucg/kg/min)</div>
                             </div>
                         </div>
                     </li>
