--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KPR</title>
+    <script src="https://kit.fontawesome.com/03e03b8b21.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -41,9 +42,12 @@
                         <input type="radio" class="form-check-input" name="age" value="child">Dijete
                         <span>&#8805;</span> 1 godine
                     </label>
+                </div>
+                
+                <div class="form-group">
+                    
                     <input type="number" class="form-control" placeholder="Unesi dob u godinama" id="age"
                         style="display: none">
-
                 </div>
             </div>
             <div class="form-group">
@@ -63,11 +67,11 @@
             <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">ARITMIJA</button></div>
             <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">GLUKOZA I ELEKTROLITI</button></div>
             <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">KONVULZIJE</button></div>
-            <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">ONKOLIGIJA</button></div>
+            <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">ONKOLOGIJA</button></div>
             <div class="row"><button class="btn btn-primary procedure-button btn-lg btn-block" id="aritmija-button">VITALNE FUNKCIJE</button></div>
         </div>
 
-        <div id="kpr" class="procedure-container" style="display: none;" >
+        <div id="kpr" class="procedure-container" style="display: none;">
             <div class="card">
                 <div class="card-header">
                     <img src="images/icons/arrow-left-circle-fill.svg" class="back-button" alt="" width="32" height="32" title="Nazad"> KPR
@@ -76,7 +80,7 @@
                     <li class="list-group-item">
                         <div class="drug-container row">
                             <div class="col-12 col-md-6">
-                                <span class="drug-name">Adrenalin</span>
+                                <span class="drug-name">Adrenalin</span> <div class="float-right"> <span id="adrenalin-info" class="fas fa-info-circle drug-button info-button"></span> <span class="fas fa-check-circle drug-button add-drug-button"></span></div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <span id="adrenalin" class="drug-value"></span>
@@ -86,7 +90,7 @@
                     <li class="list-group-item">
                         <div class="drug-container row">
                             <div class="col-12 col-md-6">
-                                <span class="drug-name">Amiodaron</span>
+                                <span class="drug-name">Amiodaron</span> <div class="float-right"> <span id="amiodaron-info" class="fas fa-info-circle drug-button info-button"></span> <span class="fas fa-check-circle drug-button add-drug-button"></span></div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <span id="amiodaron" class="drug-value"></span>
@@ -96,7 +100,7 @@
                     <li class="list-group-item">
                         <div class="drug-container row">
                             <div class="col-12 col-md-6">
-                                <span class="drug-name">Bolus tekućine</span>
+                                <span class="drug-name">Bolus tekućine</span> <div class="float-right"> <span class="fas fa-check-circle drug-button add-drug-button"></span></div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <span id="bolus" class="drug-value"></span>
@@ -106,7 +110,7 @@
                     <li class="list-group-item">
                         <div class="drug-container row">
                             <div class="col-12 col-md-6">
-                                <span class="drug-name">Defibrilacija</span>
+                                <span class="drug-name">Defibrilacija</span> <div class="float-right"> <span id="defib-info" class="fas fa-info-circle drug-button info-button"></span> <span class="fas fa-check-circle drug-button add-drug-button"></span></div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <span id="defib" class="drug-value"></span>
@@ -119,8 +123,8 @@
                                 <span class="drug-name">Veličina tubusa</span>
                             </div>
                             <div class="col-12 col-md-6">
-                                <div>Bez balončića: <span id="vtub" class="drug-value"></span> mm</div>
-                                <div>S balončićem: <span id="vtub-cuffa" class="drug-value"></span> mm</div>
+                                <div>Bez balončića: <span id="vtub" class="drug-value"></span></div>
+                                <div>S balončićem: <span id="vtub-cuffa" class="drug-value"></span></div>
                             </div>
                         </div>
                     </li>
@@ -130,19 +134,19 @@
                                 <span class="drug-name">Dubina tubusa</span>
                             </div>
                             <div class="col-12 col-md-6">
-                                <div>Oralni: <span id="oral" class="drug-value"></span> cm</div>
-                                <div>Nazalni: <span id="nazal" class="drug-value"></span> cm</div>
+                                <div>Oralni: <span id="oral" class="drug-value"></span></div>
+                                <div>Nazalni: <span id="nazal" class="drug-value"></span></div>
                             </div>
                         </div>
                     </li>
                     <li class="list-group-item tubus-container">
                         <div class="drug-container row">
                             <div class="col-12 col-md-6">
-                                <span class="drug-name">Brzina infuzije kateholamina</span>
+                                <span class="drug-name">Brzina infuzije kateholamina</span> <div class="float-right"> <span id="kateholamin-info" class="fas fa-info-circle drug-button info-button"></span> <span class="fas fa-check-circle drug-button add-drug-button"></span></div>
                             </div>
                             <div class="col-12 col-md-6">
-                                <div>Adrenalin, noradrenalin: <span id="adrenalin-noradrenalin" class="drug-value"></span> mL/h (0.1 ucg/kg/min)</div>
-                                <div>Dopamin, dobutamin: <span id="dopamin-dobutamin" class="drug-value"></span> mL/h (5 ucg/kg/min)</div>
+                                <div>Adrenalin, noradrenalin: <span id="adrenalin-noradrenalin" class="drug-value"></span> (0.1 ucg/kg/min)</div>
+                                <div>Dopamin, dobutamin: <span id="dopamin-dobutamin" class="drug-value"></span> (5 ucg/kg/min)</div>
                             </div>
                         </div>
                     </li>
@@ -207,6 +211,26 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body"> 
+                    <span id="modal-body-content"></span>               
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvori</button>
+                </div>
+            </div>
             </div>
         </div>
 
